Fix the same layout bug again in a different way

--- a/src/pages/RecommendationsPage/RecommendationsPage.scss
+++ b/src/pages/RecommendationsPage/RecommendationsPage.scss
@@ -58,7 +58,9 @@
             max-height: 7rem;
             max-width: 7rem;
             width: 100%;
+            object-fit: contain;
             margin: 0 30% 0 auto;
+            border-radius: 10px;
             @include tablet {
                 margin: 0;
             }
